--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,15 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
+a
+{
     color: white;
-    background: black;
-  }
+    transition: all .5s;
+    padding: 10px;
+    border-radius: 3px;
+    font-weight: 600;
+}
+
+a:hover
+{
+    background-color: aliceblue;
+    color: #52B9C8;
+    font-weight: 600;
 }
